# FastAPI-enterprise-boilerplate

./: .env.example  README.md  hello.py  main.py  pyproject.toml  registry.py  settings.py
apps/: base.py
apps/auth/: __init__.py
apps/auth/api/v1/: endpoints.py  router.py
apps/users/: models.py  services.py
apps/users/api/v1/: endpoints.py  router.py
core/config/: base.py
plugins/: base.py
plugins/cache/: backend.py  config.py
