[project]
name = "fast-starter"
version = "0.1.0"
description = "A modern Python(FastAPI + SQLModel) starter template."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "fastapi[standard]>=0.115.6",
    "pydantic-settings>=2.7.1",
    "redis>=5.2.1",
    "setuptools>=75.8.0",
    "sqlmodel>=0.0.22",
]
